fix: hide navbar links on small screens for better responsiveness

--- a/src/assets/css/modules/_navbar.scss
+++ b/src/assets/css/modules/_navbar.scss
@@ -57,6 +57,10 @@
         display: flex;
         align-items: center;
         gap: 3rem;
+
+        @media screen and (max-width: 547px) {
+            display: none;
+        }
     }
 
     &__logo {
